# PropPulse-AI

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: __init__.py
backend/app/api/: auth.py
backend/app/core/: config.py  decorators.py  notifications.py  security.py
backend/app/extensions/: database.py
backend/app/models/: __init__.py  audit_log.py  base.py  email_verification_token.py  oauth_identity.py  password_reset_token.py  permission.py  refresh_token.py  role.py  role_permission.py  user.py
backend/app/repositories/: audit_log_repository.py  base_repository.py  refresh_token_repository.py  role_repository.py  token_repository.py  user_repository.py
backend/app/schemas/: auth_schemas.py
backend/app/services/: auth_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0b6a4d7b8689_create_email_verification_tokens_and_.py  10c91cbdf151_create_refresh_tokens_table.py  273cee0da780_create_audit_logs_table.py  68d7380c8d79_create_oauth_identities_table.py  896b4cd9dee2_enable_citext_extension.py  9bec0ab4b86b_create_permissions_table.py  c295595abfdd_add_index_on_users_role_id.py  dbf774098fd5_create_role_permissions_table.py  dcebe5a2859d_create_users_table.py  f19b72f580cc_create_roles_table.py
backend/tests/: conftest.py
backend/tests/unit/: test_audit_log_repository.py  test_auth_schemas.py  test_auth_service_login.py  test_auth_service_logout.py  test_auth_service_password_reset.py  test_auth_service_refresh.py  test_auth_service_register.py  test_role_repository.py  (+5 more)
(+2 files in other folders)
