[project]
name = "proppulse-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "flask-sqlalchemy>=3.1",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "email-validator>=2.0",
    "email-validator>=2.0",
    "python-dotenv>=1.0",
    "redis>=5.0",
    "celery>=5.3",
    "gunicorn>=22.0",
    "argon2-cffi>=23.1",
    "pyjwt>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
